--- a/styles/global.css
+++ b/styles/global.css
@@ -38,7 +38,7 @@ article {
     @apply mx-auto;
   }
   a.autoLink {
-    @apply inline-block border-l-4 border-blue-500 px-3 py-1 leading-6 no-underline;
+    @apply inline-block border-l-4 border-blue-600 px-3 py-1 leading-6 no-underline;
   }
   a.autoLink span {
     @apply text-sm;
